Updated API response formats to wrap data in a 'data' object in CategoryController, ProductController, and UserController. Also update Swagger docs
